
- Allow ``deform.form.Form`` constructor to accept an ``autocomplete``
  keyword argument, which controls the ``autocomplete`` attribute of the form
  tag.

- Allow ``deform.widget.SequenceWidget`` constructor to accept an ``orderable``
  keyword argument.  Default is ``False``.  If ``True``, allow drag-and-drop
  reordering of SequenceWidget items (via jQuery UI Sortable).

0.9.5 (2012-04-27)
------------------

- Add translations for TinyMCE.  Thanks OCHIAI, Gouji.

- Japanese translation thanks to OCHIAI, Gouji.

- Modified Russian translation thanks to aleksandr.rakov

- Date(Time)Widget supports now options to configure it, thx to gaston
  tjebbes, kiorky

- FileUploadWidget now sanitizes IE/Windows whole-path filenames before
  passing them back to the caller during deserialization/validation.

- Add docs and dev setup.py aliases ala Pyramid.

- Add MoneyInputWidget widget type.

- Allow a custom i18n domain to be used for the "Add ${subitem_title}"
  link of a SequenceWidget.  See
  https://github.com/Pylons/deform/issues/85 .

- Allow the use of Integer values with SelectWidget.  See
  https://github.com/Pylons/deform/issues/81 .

- CheckedInputWidget and CheckedPasswordWidget now populate the "confirm"
  element with the cstruct value (for edit forms).

- Update to JQuery 1.7.2.

- Update to jquery.form 3.09.

0.9.4 (2012-02-14)
------------------

- No longer Python 2.5 compatible.  Python 2.6+ is required.

- Python 3.2 compatible.

- Translate title attribute for remove button in sequence fields.

- Do not output empty error messages for sequence items. After translation
  these would insert the PO file metadata.

- Update to lingua for translations, add french translation

- fix multiple i18n issues.

- Fix a bug where displaying error could lead on an error when you have
  imbricated Mapping objects

- Fix issue #54: form.pt does not show validation errors from the top node of
  the schema. See https://github.com/Pylons/deform/issues/54 for more