@@ -21,6 +21,14 @@ Next release
   keyword argument.  Default is ``False``.  If ``True``, allow drag-and-drop
   reordering of SequenceWidget items (via jQuery UI Sortable).
 
+- ``deform.field.Field`` now has a ``__contains__`` method, which returns
+  ``True`` if the named field is a subfield of the field on which it is
+  called.
+
+- ``deform.field.Field`` now has a ``validate_pstruct`` method which works
+  like ``validate`` except it accepts a pstruct directly instead of accepting
+  a list of controls.
+
 0.9.5 (2012-04-27)
 ------------------
 
